--- a/Pop_Density_Maps.html
+++ b/Pop_Density_Maps.html
@@ -296,6 +296,7 @@ $(document).ready(function () {
 <p>Below are a few population density maps that I had fun making. All of
 them use the the Kontour Population Density Dataset.</p>
 <p><img src="Density_Maps/Alberta.png" style="width:100%"></p>
+<p><img src="Density_Maps/Tanzania.png" style="width:100%"></p>
 
 
 
