Final steps of switch to ggiraph

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="keepers_2022_23.html">Individual Goalkeeper Performance 2022-23</a>
+      <a href="keepers_2022_23_ggirafe.html">Individual Goalkeeper Performance 2022-23</a>
     </li>
     <li>
       <a href="Sweeper_Keepers.html">Sweeper Keeping in Different Leagues</a>
