Renaming pages changing words

--- a/Pop_Density_Maps.html
+++ b/Pop_Density_Maps.html
@@ -293,8 +293,9 @@ $(document).ready(function () {
 </div>
 
 
-<p>Below are a few population density maps that I had fun making. All of
-them use the the Kontour Population Density Dataset.</p>
+<p>Below are a few population density maps that I had fun making in R.
+The main packages used to make them are Rayshader and Rayrender. The
+data come from the Kontour Population Density Dataset.</p>
 <p><img src="Density_Maps/Alberta.png" style="width:100%"></p>
 <p><img src="Density_Maps/Tanzania.png" style="width:100%"></p>
 
