--- a/Sweeper_Keepers.html
+++ b/Sweeper_Keepers.html
@@ -263,6 +263,9 @@ $(document).ready(function () {
     <li>
       <a href="Sweeper_Keepers.html">Sweeper Keeping in Different Leagues</a>
     </li>
+    <li>
+      <a href="Footballer_Nationalities.html">Where are Footballers From?</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -274,6 +277,9 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="Pop_Density_Maps.html">Population Density Maps</a>
+    </li>
+    <li>
+      <a href="Footballer_Nationalities.html">Where are Footballers From?</a>
     </li>
   </ul>
 </li>
