--- a/Tidy_Tuesday_2024.html
+++ b/Tidy_Tuesday_2024.html
@@ -335,6 +335,10 @@ of this plot. If any R folks know what is causing this issue, I would
 appreciate the insight.</p>
 <p><img src="Tidy_Tuesday_Plots/2024-01-09_Plot.jpeg" style="width:80%"></p>
 </div>
+<div id="section-1" class="section level3">
+<h3>2024-01-09</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-01-16_Plot.jpeg" style="width:80%"></p>
+</div>
 
 
 
