--- a/Tidy_Tuesday_2024.html
+++ b/Tidy_Tuesday_2024.html
@@ -329,15 +329,23 @@ my plots can be found in <a
 href="https://github.com/GregoryVdvinne/Tidy_Tuesday">this GitHub
 repo</a>.</p>
 <div id="section" class="section level3">
+<h3>2024-01-30</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-01-30.png" style="width:100%"></p>
+</div>
+<div id="section-1" class="section level3">
+<h3>2024-01-23</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-01-23.png" style="width:100%"></p>
+</div>
+<div id="section-2" class="section level3">
+<h3>2024-01-16</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-01-16_Plot.jpeg" style="width:100%"></p>
+</div>
+<div id="section-3" class="section level3">
 <h3>2024-01-09</h3>
 <p>I am aware of the unusual spacing between some words in the subtitle
 of this plot. If any R folks know what is causing this issue, I would
 appreciate the insight.</p>
-<p><img src="Tidy_Tuesday_Plots/2024-01-09_Plot.jpeg" style="width:80%"></p>
-</div>
-<div id="section-1" class="section level3">
-<h3>2024-01-09</h3>
-<p><img src="Tidy_Tuesday_Plots/2024-01-16_Plot.jpeg" style="width:80%"></p>
+<p><img src="Tidy_Tuesday_Plots/2024-01-09_Plot.jpeg" style="width:100%"></p>
 </div>
 
 
