--- a/Tidy_Tuesday_2024.html
+++ b/Tidy_Tuesday_2024.html
@@ -321,7 +321,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Below are a collection of data visualizations that I made as part of
+<p>Below is a collection of data visualizations that I made as part of
 the Tidy Tuesday project. You can learn more about the Tidy Tuesday
 project <a
 href="https://github.com/rfordatascience/tidytuesday">here</a>. Code for
@@ -329,35 +329,47 @@ my plots can be found in <a
 href="https://github.com/GregoryVdvinne/Tidy_Tuesday">this GitHub
 repo</a>.</p>
 <div id="section" class="section level3">
+<h3>2024-03-26</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-03-26.png" style="width:100%"></p>
+</div>
+<div id="section-1" class="section level3">
+<h3>2024-03-19</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-03-19.png" style="width:100%"></p>
+</div>
+<div id="section-2" class="section level3">
+<h3>2024-03-12</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-03-12.png" style="width:100%"></p>
+</div>
+<div id="section-3" class="section level3">
 <h3>2024-03-05</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-03-05.png" style="width:100%"></p>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2024-02-27</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-27.png" style="width:100%"></p>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2024-02-13</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-13.png" style="width:100%"></p>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2024-02-06</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-06_alluvial.png" style="width:100%"></p>
 <p><img src="Tidy_Tuesday_Plots/2024-02-06_staircase.png" style="width:100%"></p>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2024-01-30</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-30.png" style="width:100%"></p>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2024-01-23</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-23.png" style="width:100%"></p>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2024-01-16</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-16_Plot.jpeg" style="width:100%"></p>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2024-01-09</h3>
 <p>I am aware of the unusual spacing between some words in the subtitle
 of this plot. If any R folks know what is causing this issue, I would
