Big update September

--- a/Tidy_Tuesday_2024.html
+++ b/Tidy_Tuesday_2024.html
@@ -329,61 +329,97 @@ my plots can be found in <a
 href="https://github.com/GregoryVdvinne/Tidy_Tuesday">this GitHub
 repo</a>.</p>
 <div id="section" class="section level3">
+<h3>2024-08-27</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-08-27.png" style="width:100%"></p>
+</div>
+<div id="section-1" class="section level3">
+<h3>2024-08-20</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-08-20.png" style="width:100%"></p>
+</div>
+<div id="section-2" class="section level3">
+<h3>2024-08-06</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-08-06.gif" style="width:100%"></p>
+</div>
+<div id="section-3" class="section level3">
+<h3>2024-07-16</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-07-16.png" style="width:100%"></p>
+</div>
+<div id="section-4" class="section level3">
+<h3>2024-05-28</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-05-28.png" style="width:100%"></p>
+</div>
+<div id="section-5" class="section level3">
+<h3>2024-05-21</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-05-21.png" style="width:100%"></p>
+</div>
+<div id="section-6" class="section level3">
+<h3>2024-05-14</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-05-14.png" style="width:100%"></p>
+</div>
+<div id="section-7" class="section level3">
+<h3>2024-05-07</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-05-07.png" style="width:100%"></p>
+</div>
+<div id="section-8" class="section level3">
+<h3>2024-04-30</h3>
+<p><img src="Tidy_Tuesday_Plots/2024-04-30.png" style="width:100%"></p>
+</div>
+<div id="section-9" class="section level3">
 <h3>2024-04-23</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-04-23.png" style="width:100%"></p>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2024-04-16</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-04-16.png" style="width:100%"></p>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2024-04-09</h3>
 <p>This one is a gif, so you may have to wait for a second for it to
 play.</p>
 <p><img src="Tidy_Tuesday_Plots/2024-04-09.gif" style="width:100%"></p>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2024-03-26</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-03-26.png" style="width:100%"></p>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2024-03-19</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-03-19.png" style="width:100%"></p>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-14" class="section level3">
 <h3>2024-03-12</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-03-12.png" style="width:100%"></p>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-15" class="section level3">
 <h3>2024-03-05</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-03-05.png" style="width:100%"></p>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-16" class="section level3">
 <h3>2024-02-27</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-27.png" style="width:100%"></p>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-17" class="section level3">
 <h3>2024-02-13</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-13.png" style="width:100%"></p>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-18" class="section level3">
 <h3>2024-02-06</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-02-06_alluvial.png" style="width:100%"></p>
 <p><img src="Tidy_Tuesday_Plots/2024-02-06_staircase.png" style="width:100%"></p>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-19" class="section level3">
 <h3>2024-01-30</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-30.png" style="width:100%"></p>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-20" class="section level3">
 <h3>2024-01-23</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-23.png" style="width:100%"></p>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-21" class="section level3">
 <h3>2024-01-16</h3>
 <p><img src="Tidy_Tuesday_Plots/2024-01-16_Plot.jpeg" style="width:100%"></p>
 </div>
-<div id="section-13" class="section level3">
+<div id="section-22" class="section level3">
 <h3>2024-01-09</h3>
 <p>I am aware of the unusual spacing between some words in the subtitle
 of this plot. If any R folks know what is causing this issue, I would
