--- a/Sweeper_Keepers.html
+++ b/Sweeper_Keepers.html
@@ -307,6 +307,18 @@ $(document).ready(function () {
     </li>
   </ul>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Text Mining and LLMs
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Text-Mining-Amazon-Budgets.html">Using Text Mining and LLMs To Analyze Amazon Annual reports</a>
+    </li>
+  </ul>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
